# investment-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: code-style.mdc  development-setup.mdc  project-structure.mdc  testing-guidelines.mdc
app/: app.py  main.py
app/client/: __init__.py  akshare_finance_client.py  fred_macro_data_client.py  yahoo_finance_client.py
app/client/util/: akshare_util.py
app/config/: __init__.py
app/controller/: __init__.py  indicator_controller.py
app/repository/: __init__.py  database_base.py  macro_indicator_repo.py
app/repository/model/: macro_indicator.py
app/scheduler/: __init__.py
app/service/: __init__.py  macro_data_service.py
design/: db.mmd
doc/: c4_architecture.mmd  prd.md  project_archtecture.md
src/: main.py
src/client/: fred_macro_data_client.py  trading_economics_client.py
src/config/: db_config.py  logging_config.py
src/examples/: db_example.py
src/repo/: database.py  macro_indicator_repo.py  models.py
src/service/: macro_data_service.py
tests/: test_version.py
